WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187927
CrashTracer: com.apple.WebKit.Storage at WebCore: WebCore::encodeKey
https://bugs.webkit.org/show_bug.cgi?id=187927
Summary
CrashTracer: com.apple.WebKit.Storage at WebCore: WebCore::encodeKey
Sihui Liu
Reported
2018-07-23 14:50:03 PDT
1 0x117b89069 WTFCrash 2 0x10ad51a6b WebCore::serializedTypeForKeyType(WebCore::IndexedDB::KeyType) 3 0x10ad35b73 WebCore::encodeKey(WTF::Vector<char, 0ul, WTF::CrashOnOverflow, 16ul>&, WebCore::IDBKeyData const&) 4 0x10ad35e08 WebCore::encodeKey(WTF::Vector<char, 0ul, WTF::CrashOnOverflow, 16ul>&, WebCore::IDBKeyData const&) 5 0x10ad35a60 WebCore::serializeIDBKeyData(WebCore::IDBKeyData const&) 6 0x10adb1316 WebCore::IDBServer::SQLiteIDBBackingStore::uncheckedPutIndexRecord(long long, long long, WebCore::IDBKeyData const&, WebCore::IDBKeyData const&, long long) 7 0x10adb10ec WebCore::IDBServer::SQLiteIDBBackingStore::uncheckedPutIndexKey(WebCore::IDBIndexInfo const&, WebCore::IDBKeyData const&, WebCore::IndexKey const&, long long) 8 0x10adb4b36 WebCore::IDBServer::SQLiteIDBBackingStore::updateAllIndexesForAddRecord(WebCore::IDBObjectStoreInfo const&, WebCore::IDBKeyData const&, WebCore::ThreadSafeDataBuffer const&, long long) 9 0x10adb5872 WebCore::IDBServer::SQLiteIDBBackingStore::addRecord(WebCore::IDBResourceIdentifier const&, WebCore::IDBObjectStoreInfo const&, WebCore::IDBKeyData const&, WebCore::IDBValue const&) 10 0x10adefcb0 WebCore::IDBServer::UniqueIDBDatabase::performPutOrAdd(unsigned long long, WebCore::IDBResourceIdentifier const&, unsigned long long, WebCore::IDBKeyData const&, WebCore::IDBValue const&, WebCore::IndexedDB::ObjectStoreOverwriteMode) 11 0x10ae204f4 void WTF::callMemberFunctionForCrossThreadTaskImpl<WebCore::IDBServer::UniqueIDBDatabase, void (WebCore::IDBServer::UniqueIDBDatabase::*)(unsigned long long, WebCore::IDBResourceIdentifier const&, unsigned long long, WebCore::IDBKeyData const&, WebCore::IDBValue const&, WebCore::IndexedDB::ObjectStoreOverwriteMode), std::__1::tuple<unsigned long long, WebCore::IDBResourceIdentifier, unsigned long long, WebCore::IDBKeyData, WebCore::IDBValue, WebCore::IndexedDB::ObjectStoreOverwriteMode>, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul>(WebCore::IDBServer::UniqueIDBDatabase*, void (WebCore::IDBServer::UniqueIDBDatabase::*)(unsigned long long, WebCore::IDBResourceIdentifier const&, unsigned long long, WebCore::IDBKeyData const&, WebCore::IDBValue const&, WebCore::IndexedDB::ObjectStoreOverwriteMode), std::__1::tuple<unsigned long long, WebCore::IDBResourceIdentifier, unsigned long long, WebCore::IDBKeyData, WebCore::IDBValue, WebCore::IndexedDB::ObjectStoreOverwriteMode>&&, std::__1::integer_sequence<unsigned long, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul>) 12 0x10ae20320 void WTF::callMemberFunctionForCrossThreadTask<WebCore::IDBServer::UniqueIDBDatabase, void (WebCore::IDBServer::UniqueIDBDatabase::*)(unsigned long long, WebCore::IDBResourceIdentifier const&, unsigned long long, WebCore::IDBKeyData const&, WebCore::IDBValue const&, WebCore::IndexedDB::ObjectStoreOverwriteMode), std::__1::tuple<unsigned long long, WebCore::IDBResourceIdentifier, unsigned long long, WebCore::IDBKeyData, WebCore::IDBValue, WebCore::IndexedDB::ObjectStoreOverwriteMode>, std::__1::integer_sequence<unsigned long, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul> >(WebCore::IDBServer::UniqueIDBDatabase*, void (WebCore::IDBServer::UniqueIDBDatabase::*)(unsigned long long, WebCore::IDBResourceIdentifier const&, unsigned long long, WebCore::IDBKeyData const&, WebCore::IDBValue const&, WebCore::IndexedDB::ObjectStoreOverwriteMode), std::__1::tuple<unsigned long long, WebCore::IDBResourceIdentifier, unsigned long long, WebCore::IDBKeyData, WebCore::IDBValue, WebCore::IndexedDB::ObjectStoreOverwriteMode>&&) 13 0x10ae202b4 WTF::CrossThreadTask WTF::createCrossThreadTask<WebCore::IDBServer::UniqueIDBDatabase, unsigned long long, WebCore::IDBResourceIdentifier const&, unsigned long long, WebCore::IDBKeyData const&, WebCore::IDBValue const&, WebCore::IndexedDB::ObjectStoreOverwriteMode, unsigned long long, WebCore::IDBResourceIdentifier, unsigned long long, WebCore::IDBKeyData, WebCore::IDBValue, WebCore::IndexedDB::ObjectStoreOverwriteMode>(WebCore::IDBServer::UniqueIDBDatabase&, void (WebCore::IDBServer::UniqueIDBDatabase::*)(unsigned long long, WebCore::IDBResourceIdentifier const&, unsigned long long, WebCore::IDBKeyData const&, WebCore::IDBValue const&, WebCore::IndexedDB::ObjectStoreOverwriteMode), unsigned long long const&, WebCore::IDBResourceIdentifier const&, unsigned long long const&, WebCore::IDBKeyData const&, WebCore::IDBValue const&, WebCore::IndexedDB::ObjectStoreOverwriteMode const&)::'lambda'()::operator()() 14 0x10ae20039 WTF::Function<void ()>::CallableWrapper<WTF::CrossThreadTask WTF::createCrossThreadTask<WebCore::IDBServer::UniqueIDBDatabase, unsigned long long, WebCore::IDBResourceIdentifier const&, unsigned long long, WebCore::IDBKeyData const&, WebCore::IDBValue const&, WebCore::IndexedDB::ObjectStoreOverwriteMode, unsigned long long, WebCore::IDBResourceIdentifier, unsigned long long, WebCore::IDBKeyData, WebCore::IDBValue, WebCore::IndexedDB::ObjectStoreOverwriteMode>(WebCore::IDBServer::UniqueIDBDatabase&, void (WebCore::IDBServer::UniqueIDBDatabase::*)(unsigned long long, WebCore::IDBResourceIdentifier const&, unsigned long long, WebCore::IDBKeyData const&, WebCore::IDBValue const&, WebCore::IndexedDB::ObjectStoreOverwriteMode), unsigned long long const&, WebCore::IDBResourceIdentifier const&, unsigned long long const&, WebCore::IDBKeyData const&, WebCore::IDBValue const&, WebCore::IndexedDB::ObjectStoreOverwriteMode const&)::'lambda'()>::call() 15 0x1098552cb WTF::Function<void ()>::operator()() const 16 0x10ad0c2a5 WTF::CrossThreadTask::performTask() 17 0x10adf99f2 WebCore::IDBServer::UniqueIDBDatabase::executeNextDatabaseTask()
Attachments
Patch
(6.49 KB, patch)
2018-07-23 14:57 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-sierra
(2.32 MB, application/zip)
2018-07-23 16:04 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews106 for mac-sierra-wk2
(2.80 MB, application/zip)
2018-07-23 16:24 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews115 for mac-sierra
(3.02 MB, application/zip)
2018-07-23 16:43 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews124 for ios-simulator-wk2
(2.28 MB, application/zip)
2018-07-23 16:51 PDT
,
EWS Watchlist
no flags
Details
Patch for landing
(10.79 KB, patch)
2018-07-23 16:57 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2018-07-23 14:57:44 PDT
Created
attachment 345611
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2018-07-23 14:59:17 PDT
<
rdar://problem/42516426
>
Sihui Liu
Comment 3
2018-07-23 15:02:53 PDT
<
rdar://problem/41629014
>
Sihui Liu
Comment 4
2018-07-23 15:04:47 PDT
(In reply to Sihui Liu from
comment #3
)
> <
rdar://problem/41629014
>
Wrong radar number, should be <
rdar://problem/42388498
>.
Chris Dumez
Comment 5
2018-07-23 15:10:01 PDT
Comment on
attachment 345611
[details]
Patch Matches what is done in IDBKey::isValid(), r=me.
EWS Watchlist
Comment 6
2018-07-23 16:04:12 PDT
Comment on
attachment 345611
[details]
Patch
Attachment 345611
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/8631444
New failing tests: storage/indexeddb/index-multientry-private.html imported/w3c/web-platform-tests/IndexedDB/key-conversion-exceptions.htm
EWS Watchlist
Comment 7
2018-07-23 16:04:14 PDT
Created
attachment 345619
[details]
Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 8
2018-07-23 16:24:27 PDT
Comment on
attachment 345611
[details]
Patch
Attachment 345611
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/8631529
New failing tests: storage/indexeddb/index-multientry-private.html imported/w3c/web-platform-tests/IndexedDB/key-conversion-exceptions.htm
EWS Watchlist
Comment 9
2018-07-23 16:24:29 PDT
Created
attachment 345622
[details]
Archive of layout-test-results from ews106 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 10
2018-07-23 16:43:31 PDT
Comment on
attachment 345611
[details]
Patch
Attachment 345611
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/8631515
New failing tests: storage/indexeddb/index-multientry-private.html imported/w3c/web-platform-tests/IndexedDB/key-conversion-exceptions.htm
EWS Watchlist
Comment 11
2018-07-23 16:43:33 PDT
Created
attachment 345623
[details]
Archive of layout-test-results from ews115 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 12
2018-07-23 16:51:55 PDT
Comment on
attachment 345611
[details]
Patch
Attachment 345611
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/8631524
New failing tests: storage/indexeddb/index-multientry-private.html imported/w3c/web-platform-tests/IndexedDB/key-conversion-exceptions.htm
EWS Watchlist
Comment 13
2018-07-23 16:51:57 PDT
Created
attachment 345624
[details]
Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.4
Sihui Liu
Comment 14
2018-07-23 16:56:27 PDT
(In reply to Build Bot from
comment #12
)
> Comment on
attachment 345611
[details]
> Patch > >
Attachment 345611
[details]
did not pass ios-sim-ews (ios-simulator-wk2): > Output:
https://webkit-queues.webkit.org/results/8631524
> > New failing tests: > storage/indexeddb/index-multientry-private.html
Updated test expectation as a new test case has been added in the js file it uses.
> imported/w3c/web-platform-tests/IndexedDB/key-conversion-exceptions.htm
Updated test expectation as a check becomes PASS after the patch.
Sihui Liu
Comment 15
2018-07-23 16:57:06 PDT
Created
attachment 345625
[details]
Patch for landing
WebKit Commit Bot
Comment 16
2018-07-23 17:35:10 PDT
Comment on
attachment 345625
[details]
Patch for landing Clearing flags on attachment: 345625 Committed
r234125
: <
https://trac.webkit.org/changeset/234125
>
WebKit Commit Bot
Comment 17
2018-07-23 17:35:12 PDT
All reviewed patches have been landed. Closing bug.
David Kilzer (:ddkilzer)
Comment 18
2018-07-24 01:38:16 PDT
Fixing radar linkage: <
rdar://problem/42388498
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug