Cherry-pick r234125. rdar://problem/42721214

CrashTracer: com.apple.WebKit.Storage at WebCore: WebCore::encodeKey
    https://bugs.webkit.org/show_bug.cgi?id=187927
    LayoutTests/imported/w3c:

    <rdar://problem/42516426>

    Reviewed by Chris Dumez.

    * web-platform-tests/IndexedDB/key-conversion-exceptions-expected.txt:

    Source/WebCore:

    Reviewed by Chris Dumez.

    IDBKeyData is valid only when each key of it is valid.

    Test: LayoutTests/storage/indexeddb/index-multientry.html

    * Modules/indexeddb/IDBKeyData.cpp:
    (WebCore::IDBKeyData::isValid const):
    * Modules/indexeddb/IDBKeyData.h:
    (WebCore::IDBKeyData::isValid const): Deleted.

    LayoutTests:

    <rdar://problem/42516426>

    Reviewed by Chris Dumez.

    Add a new test case in existing test file to cover the crash case and update the expecation accordingly.

    * storage/indexeddb/index-multientry-expected.txt:
    * storage/indexeddb/index-multientry-private-expected.txt:
    * storage/indexeddb/resources/index-multientry.js:
    (addData):

    Canonical link: https://commits.webkit.org/203104@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234125 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/202900.108@safari-606-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-606-branch@234351 268f45cc-cd09-0410-ab3c-d52691b4dbfc